[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/main_menu_title.tres" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/ui_game_menu_base.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/MainMenuSelection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/SadMusic.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "TitleAnimation"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 250
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Frame" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
patch_margin_left = 44
patch_margin_top = 44
patch_margin_right = 50
patch_margin_bottom = 47
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
centered = false
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/TitleAnimation = SubResource( 1 )

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SplashText" type="Node2D" parent="."]
position = Vector2( 78, 966 )

[node name="Label" type="Label" parent="SplashText"]
margin_right = 588.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
text = "THEME: UNSTABLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDilation" type="Node2D" parent="."]
position = Vector2( 78, 96 )

[node name="Label" type="Label" parent="TimeDilation"]
margin_right = 805.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
text = "MADE FOR LUDUM DARE #49"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PulseUp" type="Tween" parent="."]

[node name="PulseUp2" type="Tween" parent="."]

[node name="MainMenu_Selections" parent="." instance=ExtResource( 4 )]
anchor_bottom = 0.5
margin_left = 1384.0
margin_top = 308.0
margin_right = 1768.0
margin_bottom = 708.0

[node name="Title" type="Label" parent="."]
margin_left = 94.0
margin_top = 198.0
margin_right = 970.0
margin_bottom = 641.0
custom_fonts/font = SubResource( 3 )
text = "PAPER 
ROUTE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_completed" from="PulseUp" to="." method="_on_PulseUp_tween_completed"]
[connection signal="tween_completed" from="PulseUp2" to="." method="_on_PulseUp2_tween_completed"]
